tests/ui/rfc-2126-extern-absolute-paths/not-allowed.stderr
error[E0432]: unresolved import `alloc`
  --> $DIR/not-allowed.rs:5:5
   |
LL | use alloc;
   |     ^^^^^ no external crate `alloc`
   |
help: consider importing one of these items instead
   |
LL | use core::alloc;
   |     ~~~~~~~~~~~
LL | use std::alloc;
   |     ~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
